--- a/src/main/infrastructure/service/config/artemis-roles.properties
+++ b/src/main/infrastructure/service/config/artemis-roles.properties
@@ -15,4 +15,4 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-amq = artemis
+technology-messaging-service-admin = artemis
