--- a/src/main/infrastructure/service/login.config
+++ b/src/main/infrastructure/service/login.config
@@ -16,9 +16,20 @@
  */
 
 activemq {
-   org.apache.activemq.artemis.spi.core.security.jaas.PropertiesLoginModule required
-       debug=false
-       reload=true
-       org.apache.activemq.jaas.properties.user="artemis-users.properties"
-       org.apache.activemq.jaas.properties.role="artemis-roles.properties";
+    org.apache.activemq.artemis.spi.core.security.jaas.LDAPLoginModule required
+        debug=true
+        initialContextFactory=com.sun.jndi.ldap.LdapCtxFactory
+        connectionURL="${LDAP_HOST}"
+        connectionUsername="${LDAP_USER}"
+        connectionPassword=${LDAP_PASSWORD}
+        connectionProtocol=
+        authentication=simple
+        userBase="${LDAP_USER_BASE}"
+        userSearchMatching="(cn={0})"
+        userSearchSubtree=true
+        roleBase="${LDAP_ROLE_BASE}"
+        roleName=cn
+        roleSearchMatching="(memberUid={1})"
+        roleSearchSubtree=true
+        ;
 };
