- Configuring logging and improving health check;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/config/logging.properties
+++ b/src/main/infrastructure/service/config/logging.properties
@@ -29,7 +29,7 @@ logger.org.apache.activemq.artemis.jms.level=INFO
 logger.org.apache.activemq.artemis.integration.bootstrap.level=INFO
 logger.org.eclipse.jetty.level=WARN
 # Root logger handlers
-logger.handlers=CONSOLE
+logger.handlers=CONSOLE,FILE
 
 # to enable audit change the level to INFO
 logger.org.apache.activemq.audit.base.level=ERROR
