- updating configuration and upgradig Java;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/config/logging.properties
+++ b/src/main/infrastructure/service/config/logging.properties
@@ -20,7 +20,7 @@
 loggers=org.eclipse.jetty,org.jboss.logging,org.apache.activemq.artemis.core.server,org.apache.activemq.artemis.utils,org.apache.activemq.artemis.journal,org.apache.activemq.artemis.jms.server,org.apache.activemq.artemis.integration.bootstrap,org.apache.activemq.audit.base,org.apache.activemq.audit.message,org.apache.activemq.audit.resource
 
 # Root logger level
-logger.level=INFO
+logger.level=TRACE
 # ActiveMQ Artemis logger levels
 logger.org.apache.activemq.artemis.core.server.level=INFO
 logger.org.apache.activemq.artemis.journal.level=INFO
