--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -1,87 +1,84 @@
 # From Java service.
 FROM coldis/infrastructure-java-service:3.0
 
-# Creates the user and group for Artemis.
-RUN groupadd -r artemis && \
-	useradd -r -g artemis artemis
+# Make sure pipes are considered to determine success.
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+WORKDIR /opt/
 
-# Installs necessary libs.
-RUN apt-get update && \
-	apt-get install -y --no-install-recommends libaio1 xmlstarlet curl jq && \
-	apt-get clean -y && \
-	rm -rf /var/lib/apt/lists/*
+# Variables.
+ENV ARTEMIS_USERNAME=artemis \
+	ARTEMIS_PASSWORD=artemis \
+	EXTRA_ARGS="--http-host 0.0.0.0 --host 0.0.0.0 --relax-jolokia --require-login --verbose"
+
+# Configures users and basic libs.
+RUN groupadd -r artemis \
+	&& useradd -r -g artemis artemis \
+	&& apt-get -qq -o=Dpkg::Use-Pty=0 update \
+	&& apt-get -qq -o=Dpkg::Use-Pty=0 install -y libaio1 curl jq \
+	&& rm -rf /var/lib/apt/lists/*
 
 # Installs Artemis.
-ENV ACTIVEMQ_ARTEMIS_VERSION 2.20.0
-RUN apt-get update && \
-	apt-get install -y --no-install-recommends wget gnupg2 && \
-	cd /opt && \
-	wget "https://www.apache.org/dist/activemq/activemq-artemis/${ACTIVEMQ_ARTEMIS_VERSION}/apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz" && \
-	wget "https://www.apache.org/dist/activemq/activemq-artemis/${ACTIVEMQ_ARTEMIS_VERSION}/apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz.asc" && \
-	wget "https://apache.org/dist/activemq/KEYS" && \
-	gpg --no-tty --import "KEYS" && \
-	gpg --no-tty "apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz.asc" && \	
-	tar xfz apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz && \
-	ln -s apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION} apache-artemis && \
-	chmod 755 apache-artemis && \
-	rm -f apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz KEYS apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz.asc && \
-	apt-get remove -y wget gnupg2 && \
-	apt-get clean -y && \
-	rm -rf /var/lib/apt/lists/*
-
-
+ENV ACTIVEMQ_ARTEMIS_VERSION 2.21.0
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends wget gnupg2 \
+	&& wget "https://www.apache.org/dist/activemq/activemq-artemis/${ACTIVEMQ_ARTEMIS_VERSION}/apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz" \
+	&& wget "https://www.apache.org/dist/activemq/activemq-artemis/${ACTIVEMQ_ARTEMIS_VERSION}/apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz.asc" \
+	&& wget "https://apache.org/dist/activemq/KEYS" \
+	&& gpg --no-tty --import "KEYS" \
+	&& gpg --no-tty "apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz.asc" \
+	&& tar xfz apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz \
+	&& mv apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION} artemis \
+	&& chmod 755 artemis \
+	&& rm -f apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz KEYS apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}-bin.tar.gz.asc \
+	&& apt-get remove -y wget gnupg2 \
+	&& apt-get clean -y \
+	&& rm -rf /var/lib/apt/lists/* 
+	
 # Creates broker instance.
-RUN cd /var/lib && \
-	/opt/apache-artemis-${ACTIVEMQ_ARTEMIS_VERSION}/bin/artemis create artemis \
-	--home /opt/apache-artemis \
-	--user artemis \
-	--password password \
+RUN cd /var/lib \
+	&& /opt/artemis/bin/artemis create artemis \
+	--home /opt/artemis \
+	--user "${ARTEMIS_USERNAME}" \
+	--password "${ARTEMIS_PASSWORD}" \
 	--role "technology-messaging-service-admin" \
-	--require-login \
-	--cluster-user artemisCluster \
-	--cluster-password password && ls -la artemis && ls artemis/bin
-
-# Copies scripts and utilities.
-ENV ARTEMIS_GLOBAL_MAX_SIZE=512MB
-RUN mkdir -p /opt/artemis-utils
-COPY utils /opt/artemis-utils
+	--cluster-user "${ARTEMIS_USERNAME}-cluster" \
+	--cluster-password "${ARTEMIS_PASSWORD}" \
+	${EXTRA_ARGS}
 COPY config /var/lib/artemis/etc
-COPY script/artemis_init.sh /artemis_init
-COPY script/artemis_health_check.sh /artemis_health_check
-RUN mkdir -p /opt/jmx-exporter/etc/ \
-		/var/lib/artemis/lock && \
-	ln -s /opt/artemis-utils/jmx-exporter-config.yaml /opt/jmx-exporter/etc/jmx-exporter-config.yaml && \
-	chown -R artemis.artemis \
-		/artemis_init \
-		/artemis_health_check \
-		/var/lib/artemis \
-		/opt/artemis-utils \
-		/opt/jmx-exporter && \
-	chmod 755 -R /artemis_init
+RUN mkdir -p /var/lib/artemis/lock \
+	&& chown -R artemis.artemis /var/lib/artemis
 
-COPY lib /var/lib/artemis/lib
-
-# Goes back to artemis user.
+# Copies the scripts.
+RUN mkdir -p /opt/artemis-script
+COPY script /opt/artemis-script
+RUN chmod -R 755 /opt/artemis-script \
+	&& ln -s /opt/artemis-script/*.sh /usr/bin \
+	&& for FILE in /usr/bin/artemis*.sh; \
+	do \
+		mv -- "${FILE}" "${FILE%.sh}"; \
+	done
+	
 USER artemis
 
-# Exposes ports. 
 # Web Server
-EXPOSE 8161
-# CORE,MQTT,AMQP,HORNETQ,STOMP,OPENWIRE
-EXPOSE 61616
-# HORNETQ,STOMP
-EXPOSE 5445
-# AMQP
-EXPOSE 5672
-# MQTT
-EXPOSE 1883
-# STOMP
-EXPOSE 61613
-
-# Work directory.
-WORKDIR /var/lib/artemis/bin
+EXPOSE 8161 \
+	# JMX Exporter
+	9404 \
+	# Port for CORE,MQTT,AMQP,HORNETQ,STOMP,OPENWIRE
+	61616 \
+	# Port for HORNETQ,STOMP
+	5445 \
+	# Port for AMQP
+	5672 \
+	# Port for MQTT
+	1883 \
+	#Port for STOMP
+	61613
+	
+# Workdir.
+WORKDIR /var/lib/artemis
 
 # Command.
-ENTRYPOINT [ "/artemis_init" ]
-CMD [ "./artemis", "run" ]
+ENTRYPOINT [ "artemis_init" ]
+CMD [ "./bin/artemis", "run" ]
 
