--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -1,5 +1,5 @@
 # From Java service.
-FROM coldis/infrastructure-java-service:3.0
+FROM coldis/infrastructure-java-service:4.0
 
 # Make sure pipes are considered to determine success.
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
@@ -17,9 +17,8 @@ RUN groupadd -r artemis \
 	&& apt-get -qq -o=Dpkg::Use-Pty=0 autoremove -y \
 	&& apt-get -qq -o=Dpkg::Use-Pty=0 install -y libaio1 curl jq \
 	&& rm -rf /var/lib/apt-get/lists/*
-
 # Installs Artemis.
-ENV ACTIVEMQ_ARTEMIS_VERSION="2.25.0" \
+ENV ACTIVEMQ_ARTEMIS_VERSION="2.27.1" \
 	CREATE_ARGS="--http-host 0.0.0.0 --host 0.0.0.0 --relax-jolokia --require-login --verbose --no-autotune"
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends wget gnupg2 \
@@ -36,7 +35,15 @@ RUN apt-get update \
 	&& apt-get -qq -o=Dpkg::Use-Pty=0 autoremove -y \
 	&& apt-get clean -y \
 	&& rm -rf /var/lib/apt-get/lists/* 
-	
+
+# Installs basic libs.
+RUN  apt-get update \
+	&& apt-get install -y --no-install-recommends gettext-base moreutils \
+	&& apt-get remove -y wget gnupg2 \
+	&& apt-get -qq -o=Dpkg::Use-Pty=0 autoremove -y \
+	&& apt-get clean -y \
+	&& rm -rf /var/lib/apt-get/lists/* 
+
 # Creates broker instance.
 RUN cd /var/lib \
 	&& /opt/artemis/bin/artemis create artemis \
@@ -61,7 +68,10 @@ RUN chmod -R 755 /opt/artemis-script \
 	do \
 		mv -- "${FILE}" "${FILE%.sh}"; \
 	done
-	
+
+# Variables.
+ENV BATCH_DELAY=13
+
 # Web Server
 EXPOSE 8161 \
 	# JMX Exporter
