- Configuring default threads and connections;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -72,15 +72,17 @@ RUN chmod -R 755 /opt/artemis-script \
 # Variables.
 ENV MAX_GLOBAL_SIZE_RATIO=4\
 	MAX_QUEUE_SIZE_RATIO=16\
+	THREAD_POOL_RATIO=48\
+	SCHEDULED_THREAD_POOL_RATIO=32\
 	CONN_USE_EPOLL=true\
 	CONN_TCP_BUFFER_SIZE=2097152\
-	CONN_CONNECTIONS_ALLOWED=128\
 	CONN_TCP_NO_DELAY=FALSE\
 	CONN_BATCH_DELAY=3\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
 	CONN_LARGE_MESSAGE_SIZE=51200\
-	CONN_REMOTING_THREADS=64
+	CONN_REMOTING_THREADS_RATIO=92\
+	CONN_CONNECTIONS_ALLOWED_RATIO=256
 
 
 # Web Server
