--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -74,13 +74,18 @@ ENV MAX_GLOBAL_SIZE_RATIO=4\
 	MAX_QUEUE_SIZE_RATIO=16\
 	THREAD_POOL_RATIO=48\
 	SCHEDULED_THREAD_POOL_RATIO=32\
+	PAGE_SIZE=11\
+	PAGE_CACHE_SIZE=5\
+	CONSUMER_WINDOW_SIZE=3145728\
 	CONN_USE_EPOLL=true\
-	CONN_TCP_BUFFER_SIZE=524288\
-	CONN_TCP_NO_DELAY=FALSE\
+	CONN_TCP_BUFFER_SIZE=4194304\
+	CONN_TCP_NO_DELAY=true\
 	CONN_BATCH_DELAY=13\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_LARGE_MESSAGE_SIZE=51200\
+	CONN_LARGE_MESSAGE_SIZE=262144\
+	CONN_LARGE_MESSAGE_COMPRESS=true\
+	CONN_LARGE_MESSAGE_COMPRESSION_LEVEL=4\
 	CONN_REMOTING_THREADS_RATIO=92\
 	CONN_CONNECTIONS_ALLOWED_RATIO=256
 
