Breaking config in files

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -88,7 +88,8 @@ ENV MAX_GLOBAL_SIZE_RATIO=4\
 	CONN_LARGE_MESSAGE_COMPRESS=true\
 	CONN_LARGE_MESSAGE_COMPRESSION_LEVEL=4\
 	CONN_REMOTING_THREADS_RATIO=64\
-	CONN_CONNECTIONS_ALLOWED_RATIO=256
+	CONN_CONNECTIONS_ALLOWED_RATIO=256 \
+	ARTEMIS_DIR=/var/lib/artemis/etc
 
 
 # Web Server
