--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -83,25 +83,25 @@ RUN chmod -R 755 /opt/artemis-script \
 	done
 
 # Variables.
-ENV MAX_GLOBAL_SIZE_RATIO=3\
-	MAX_QUEUE_SIZE_RATIO=32\
+ENV MAX_GLOBAL_SIZE_MEM_RATIO=5\
+	MAX_QUEUE_SIZE_MEM_RATIO=32\
 	MAX_QUEUE_SIZE_COUNT=77777\
-	THREAD_POOL_RATIO=64\
-	SCHEDULED_THREAD_POOL_RATIO=64\
+	THREAD_POOL_PROC_RATIO=256\
+	SCHEDULED_THREAD_POOL_PROC_RATIO=256\
 	PAGE_SIZE=11\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
 	CONSUMER_WINDOW_SIZE=131072\
 	CONN_USE_EPOLL=true\
-	CONN_TCP_BUFFER_SIZE=4194304\
-	CONN_TCP_NO_DELAY=true\
-	CONN_BATCH_DELAY=13\
+	CONN_TCP_BUFFER_SIZE=16777216\
+	CONN_TCP_NO_DELAY=false\
+	CONN_BATCH_DELAY=3\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
 	CONN_LARGE_MESSAGE_SIZE=262144\
 	CONN_LARGE_MESSAGE_COMPRESS=true\
 	CONN_LARGE_MESSAGE_COMPRESSION_LEVEL=4\
-	CONN_REMOTING_THREADS_RATIO=256\
-	CONN_CONNECTIONS_ALLOWED_RATIO=2048\
+	CONN_REMOTING_THREADS_PROC_RATIO=512\
+	CONN_CONNECTIONS_ALLOWED_MEM_RATIO=8\
 	ARTEMIS_DIR=/var/lib/artemis/etc
 
 
