--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -88,20 +88,20 @@ ENV MAX_GLOBAL_SIZE_MEM_RATIO=5\
 	MAX_QUEUE_SIZE_COUNT=500000\
 	PREFECTH_QUEUE_SIZE_MEM_RATIO=64\
 	PREFECTH_QUEUE_SIZE_COUNT=250000\
-	THREAD_POOL_PROC_RATIO=128\
+	THREAD_POOL_PROC_RATIO=256\
 	SCHEDULED_THREAD_POOL_PROC_RATIO=64\
 	PAGE_SIZE=11\
 	PAGE_MAX_IO_CONCURRENCY=5\
 	READ_WHOLE_PAGE=false\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
 	CONSUMER_WINDOW_SIZE=262144\
-	CONN_USE_EPOLL=true\
+	CONN_USE_EPOLL=false\
 	CONN_TCP_BUFFER_SIZE=16777216\
 	CONN_TCP_NO_DELAY=false\
 	CONN_BATCH_DELAY=10\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_RATIO=256\
+	CONN_REMOTING_THREADS_PROC_RATIO=512\
 	CONN_CONNECTIONS_ALLOWED_MEM_RATIO=8\
 	ARTEMIS_DIR=/var/lib/artemis/etc
 
