--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -85,14 +85,14 @@ RUN chmod -R 755 /opt/artemis-script \
 # Variables.
 ENV MAX_GLOBAL_SIZE_MEM_RATIO=5\
 	MAX_QUEUE_SIZE_MEM_RATIO=32\
-	MAX_QUEUE_SIZE_COUNT=500000\
-	PREFECTH_QUEUE_SIZE_MEM_RATIO=64\
-	PREFECTH_QUEUE_SIZE_COUNT=250000\
-	THREAD_POOL_PROC_RATIO=512\
-	SCHEDULED_THREAD_POOL_PROC_RATIO=64\
+	MAX_QUEUE_SIZE_COUNT=400000\
+	PREFECTH_QUEUE_SIZE_MEM_RATIO=128\
+	PREFECTH_QUEUE_SIZE_COUNT=100000\
+	THREAD_POOL_PROC_RATIO=128\
+	SCHEDULED_THREAD_POOL_PROC_RATIO=32\
 	PAGE_SIZE=11\
 	PAGE_MAX_IO_CONCURRENCY=8\
-	READ_WHOLE_PAGE=false\
+	READ_WHOLE_PAGE=true\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
 	CONSUMER_WINDOW_SIZE=524288\
 	CONN_USE_EPOLL=false\
@@ -101,7 +101,7 @@ ENV MAX_GLOBAL_SIZE_MEM_RATIO=5\
 	CONN_BATCH_DELAY=20\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_RATIO=512\
+	CONN_REMOTING_THREADS_PROC_RATIO=128\
 	CONN_CONNECTIONS_ALLOWED_MEM_RATIO=8\
 	ARTEMIS_DIR=/var/lib/artemis/etc
 
