--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -18,7 +18,7 @@ RUN groupadd -r artemis \
 	&& apt-get -qq -o=Dpkg::Use-Pty=0 install -y libaio1 curl jq \
 	&& rm -rf /var/lib/apt-get/lists/*
 # Installs Artemis.
-ENV ACTIVEMQ_ARTEMIS_VERSION="2.34.0" \
+ENV ACTIVEMQ_ARTEMIS_VERSION="2.35.0" \
 	CREATE_ARGS="--http-host 0.0.0.0 --host 0.0.0.0 --relax-jolokia --require-login --verbose --no-autotune"
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends wget gnupg2 \
@@ -70,28 +70,34 @@ RUN chmod -R 755 /opt/artemis-script \
 	done
 
 # Variables.
-ENV MAX_GLOBAL_SIZE_MEM_PERC=7\
-	MAX_QUEUE_SIZE_MEM_PERC=3\
-	MAX_QUEUE_SIZE_COUNT=30000\
-	PREFECTH_QUEUE_SIZE_MEM_PERC=3\
-	PREFECTH_QUEUE_SIZE_COUNT=500000\
+ENV MAX_GLOBAL_SIZE_MEM_PERC=10\
+	MAX_QUEUE_SIZE_MEM_PERC=1\
+	MAX_QUEUE_SIZE_COUNT=-1\
+	PREFECTH_QUEUE_SIZE_MEM_PERC=1\
+	PREFECTH_QUEUE_SIZE_COUNT=-1\
 	ASYNC_CONNECTION_EXECUTION_ENABLED=true\
-	THREAD_POOL_PROC_PERC=1600\
-	SCHEDULED_THREAD_POOL_PROC_PERC=800\
+	THREAD_POOL_PROC_PERC=700\
+	SCHEDULED_THREAD_POOL_PROC_PERC=300\
+	PAGE_SYNC_PER_SEC=1000\
 	PAGE_SIZE=10\
-	PAGE_MAX_IO_CONCURRENCY=8\
+	PAGE_MAX_IO_CONCURRENCY=10\
 	READ_WHOLE_PAGE=true\
+	JOURNAL_TYPE=NIO\
+	JOURNAL_MAX_IO=1\
 	JOURNAL_FILE_SIZE=10\
-	JOURNAL_MIN_FILES_PERC=10\
+	JOURNAL_MIN_FILES_PERC=5\
 	JOURNAL_MIN_FILES_CAP=200\
 	JOURNAL_POOL_FILES_PERC=10\
+	JOURNAL_POOL_FILES_CAP=500\
 	JOURNAL_COMPACT_MIN_FILES_PERC=30\
 	JOURNAL_COMPACT_MIN_FILES_CAP=500\
-	JOURNAL_COMPACT_PERC=50\
-	JOURNAL_BUFFER_SIZE_PERC=5\
+	JOURNAL_COMPACT_PERC=80\
+	JOURNAL_BUFFER_SIZE_PERC=3\
+	JOURNAL_BUFFER_PER_SEC=1000\
+	JOURNAL_DATA_SYNC=true\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
 	CONSUMER_WINDOW_SIZE=524288\
-	CONN_USE_EPOLL=true\
+	CONN_USE_EPOLL=false\
 	CONN_TCP_BUFFER_SIZE=524288\
 	CONN_LOW_BUFFER_WATERMARK_PERC=100\
 	CONN_HIGH_BUFFER_WATERMARK_PERC=150\
@@ -99,8 +105,10 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=7\
 	CONN_BATCH_DELAY=5\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_PERC=1000\
+	CONN_REMOTING_THREADS_PROC_PERC=1700\
 	CONN_CONNECTIONS_ALLOWED_MEM_PERC=700\
+	FORCE_COMPACT=false\
+	FORCE_RECOVER=false\
 	ARTEMIS_DIR=/var/lib/artemis/etc
 
 
