- Tuning page and journal size, upgrading Artemis and decreasing remoting threads;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -18,7 +18,7 @@ RUN groupadd -r artemis \
 	&& apt-get -qq -o=Dpkg::Use-Pty=0 install -y libaio1 curl jq \
 	&& rm -rf /var/lib/apt-get/lists/*
 # Installs Artemis.
-ENV ACTIVEMQ_ARTEMIS_VERSION="2.35.0" \
+ENV ACTIVEMQ_ARTEMIS_VERSION="2.36.0" \
 	CREATE_ARGS="--http-host 0.0.0.0 --host 0.0.0.0 --relax-jolokia --require-login --verbose --no-autotune"
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends wget gnupg2 \
@@ -76,15 +76,17 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=10\
 	PREFECTH_QUEUE_SIZE_MEM_PERC=1\
 	PREFECTH_QUEUE_SIZE_COUNT=-1\
 	ASYNC_CONNECTION_EXECUTION_ENABLED=true\
-	THREAD_POOL_PROC_PERC=1000\
-	SCHEDULED_THREAD_POOL_PROC_PERC=370\
+	THREAD_POOL_PROC_PERC=-1\
+	SCHEDULED_THREAD_POOL_PROC_PERC=300\
 	PAGE_SYNC_PER_SEC=200\
-	PAGE_SIZE=10\
-	PAGE_MAX_IO_CONCURRENCY=5\
+	PAGE_SIZE_PERC=1\
+	PAGE_MAX_SIZE=200\
+	PAGE_MAX_IO_CONCURRENCY=10\
 	READ_WHOLE_PAGE=true\
 	JOURNAL_TYPE=NIO\
 	JOURNAL_MAX_IO=1\
-	JOURNAL_FILE_SIZE=10\
+	JOURNAL_FILE_SIZE_PERC=1\
+	JOURNAL_FILE_MAX_SIZE=200\
 	JOURNAL_MIN_FILES_PERC=5\
 	JOURNAL_MIN_FILES_CAP=200\
 	JOURNAL_POOL_FILES_PERC=10\
@@ -105,7 +107,7 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=10\
 	CONN_BATCH_DELAY=5\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_PERC=1700\
+	CONN_REMOTING_THREADS_PROC_PERC=500\
 	CONN_CONNECTIONS_ALLOWED_MEM_PERC=700\
 	FORCE_COMPACT=false\
 	FORCE_RECOVER=false\
