--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -96,7 +96,7 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=30\
 	JOURNAL_COMPACT_PERC=80\
 	JOURNAL_BUFFER_SIZE_PERC=1\
 	JOURNAL_BUFFER_PER_SEC=500\
-	JOURNAL_DATA_SYNC=true\
+	JOURNAL_DATA_SYNC=false\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
 	CONSUMER_WINDOW_SIZE=262144\
 	CONN_USE_EPOLL=false\
