--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -71,22 +71,22 @@ RUN chmod -R 755 /opt/artemis-script \
 
 # Variables.
 ENV MAX_GLOBAL_SIZE_MEM_PERC=30\
-	MAX_QUEUE_SIZE_MEM_PERC=7\
-	MAX_QUEUE_SIZE_COUNT=-1\
+	MAX_QUEUE_SIZE_MEM_PERC=1\
+	MAX_QUEUE_SIZE_COUNT=100000\
 	PREFECTH_QUEUE_SIZE_MEM_PERC=1\
-	PREFECTH_QUEUE_SIZE_COUNT=-1\
-	ASYNC_CONNECTION_EXECUTION_ENABLED=true\
+	PREFECTH_QUEUE_SIZE_COUNT=100000\
+	ASYNC_CONNECTION_EXECUTION_ENABLED=false\
 	THREAD_POOL_PROC_PERC=-1\
 	SCHEDULED_THREAD_POOL_PROC_PERC=300\
-	PAGE_SYNC_PER_SEC=500\
-	PAGE_SIZE_PERC=1\
-	PAGE_MAX_SIZE=100\
-	PAGE_MAX_IO_CONCURRENCY=100\
-	READ_WHOLE_PAGE=true\
+	PAGE_SYNC_PER_SEC=100\
+	PAGE_SIZE_PERC=10\
+	PAGE_MAX_SIZE=50\
+	PAGE_MAX_IO_CONCURRENCY=30\
+	READ_WHOLE_PAGE=false\
 	JOURNAL_TYPE=NIO\
 	JOURNAL_MAX_IO=1\
 	JOURNAL_FILE_SIZE_PERC=1\
-	JOURNAL_FILE_MAX_SIZE=100\
+	JOURNAL_FILE_MAX_SIZE=50\
 	JOURNAL_MIN_FILES_PERC=5\
 	JOURNAL_MIN_FILES_CAP=200\
 	JOURNAL_POOL_FILES_PERC=10\
@@ -95,7 +95,7 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=30\
 	JOURNAL_COMPACT_MIN_FILES_CAP=500\
 	JOURNAL_COMPACT_PERC=80\
 	JOURNAL_BUFFER_SIZE_PERC=1\
-	JOURNAL_BUFFER_PER_SEC=500\
+	JOURNAL_BUFFER_PER_SEC=1000\
 	JOURNAL_DATA_SYNC=false\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
 	CONSUMER_WINDOW_SIZE=262144\
@@ -104,10 +104,10 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=30\
 	CONN_LOW_BUFFER_WATERMARK_PERC=100\
 	CONN_HIGH_BUFFER_WATERMARK_PERC=150\
 	CONN_TCP_NO_DELAY=true\
-	CONN_BATCH_DELAY=5\
+	CONN_BATCH_DELAY=0\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_PERC=600\
+	CONN_REMOTING_THREADS_PROC_PERC=1000\
 	CONN_CONNECTIONS_ALLOWED_MEM_PERC=700\
 	FORCE_COMPACT=false\
 	FORCE_RECOVER=false\
