- Setting minimum thread pool;

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -18,7 +18,7 @@ RUN groupadd -r artemis \
 	&& apt-get -qq -o=Dpkg::Use-Pty=0 install -y libaio1 curl jq \
 	&& rm -rf /var/lib/apt-get/lists/*
 # Installs Artemis.
-ENV ACTIVEMQ_ARTEMIS_VERSION="2.36.0" \
+ENV ACTIVEMQ_ARTEMIS_VERSION="2.37.0" \
 	CREATE_ARGS="--http-host 0.0.0.0 --host 0.0.0.0 --relax-jolokia --require-login --verbose --no-autotune"
 RUN apt-get update \
 	&& apt-get install -y --no-install-recommends wget gnupg2 \
@@ -70,14 +70,16 @@ RUN chmod -R 755 /opt/artemis-script \
 	done
 
 # Variables.
-ENV MAX_GLOBAL_SIZE_MEM_PERC=30\
+ENV MAX_GLOBAL_SIZE_MEM_PERC=37\
 	MAX_QUEUE_SIZE_MEM_PERC=1\
 	MAX_QUEUE_SIZE_COUNT=100000\
 	PREFECTH_QUEUE_SIZE_MEM_PERC=1\
 	PREFECTH_QUEUE_SIZE_COUNT=100000\
-	ASYNC_CONNECTION_EXECUTION_ENABLED=false\
-	THREAD_POOL_PROC_PERC=-1\
+	ASYNC_CONNECTION_EXECUTION_ENABLED=true\
+	THREAD_POOL_PROC_PERC=1300\
+	THREAD_POOL_MIN=16\
 	SCHEDULED_THREAD_POOL_PROC_PERC=300\
+	SCHEDULED_THREAD_POOL_MIN=16\
 	PAGE_SYNC_PER_SEC=100\
 	PAGE_SIZE_PERC=10\
 	PAGE_MAX_SIZE=50\
@@ -88,11 +90,11 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=30\
 	JOURNAL_FILE_SIZE_PERC=1\
 	JOURNAL_FILE_MAX_SIZE=50\
 	JOURNAL_MIN_FILES_PERC=5\
-	JOURNAL_MIN_FILES_CAP=200\
+	JOURNAL_MIN_FILES_DISK_CAP=1000\
 	JOURNAL_POOL_FILES_PERC=10\
-	JOURNAL_POOL_FILES_CAP=500\
+	JOURNAL_POOL_FILES_DISK_CAP=5000\
 	JOURNAL_COMPACT_MIN_FILES_PERC=30\
-	JOURNAL_COMPACT_MIN_FILES_CAP=500\
+	JOURNAL_COMPACT_MIN_FILES_DISK_CAP=5000\
 	JOURNAL_COMPACT_PERC=80\
 	JOURNAL_BUFFER_SIZE_PERC=1\
 	JOURNAL_BUFFER_PER_SEC=1000\
@@ -104,10 +106,11 @@ ENV MAX_GLOBAL_SIZE_MEM_PERC=30\
 	CONN_LOW_BUFFER_WATERMARK_PERC=100\
 	CONN_HIGH_BUFFER_WATERMARK_PERC=150\
 	CONN_TCP_NO_DELAY=true\
-	CONN_BATCH_DELAY=0\
+	CONN_BATCH_DELAY=3\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_PERC=1000\
+	CONN_REMOTING_THREADS_PROC_PERC=3000\
+	CONN_REMOTING_THREADS_MIN=48\
 	CONN_CONNECTIONS_ALLOWED_MEM_PERC=700\
 	FORCE_COMPACT=false\
 	FORCE_RECOVER=false\
