- Improving discover of OS resources, decresing pool pages and updating base Java image; Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -75,7 +75,7 @@ ENV LOG_LEVEL=INFO\
 	PREFECTH_QUEUE_WINDOW_SIZE_MULT=30\
 	PREFECTH_QUEUE_SIZE_COUNT=3000000\
 	ASYNC_CONNECTION_EXECUTION_ENABLED=true\
-	THREAD_POOL_PROC_PERC=2000\
+	THREAD_POOL_PROC_PERC=500\
 	THREAD_POOL_MIN=48\
 	SCHEDULED_THREAD_POOL_PROC_PERC=70\
 	SCHEDULED_THREAD_POOL_MIN=16\
@@ -88,13 +88,13 @@ ENV LOG_LEVEL=INFO\
 	JOURNAL_MAX_IO=1\
 	JOURNAL_FILE_SIZE_PERC=1\
 	JOURNAL_FILE_MAX_SIZE=100\
-	JOURNAL_MIN_FILES_PERC=10\
-	JOURNAL_MIN_FILES_DISK_CAP=1000\
+	JOURNAL_MIN_FILES_PERC=20\
+	JOURNAL_MIN_FILES_DISK_CAP=3000\
 	JOURNAL_POOL_FILES_PERC=20\  
-	JOURNAL_POOL_FILES_DISK_CAP=20000\
-	JOURNAL_COMPACT_MIN_FILES_PERC=30\
-	JOURNAL_COMPACT_MIN_FILES_DISK_CAP=30000\
-	JOURNAL_COMPACT_PERC=50\
+	JOURNAL_POOL_FILES_DISK_CAP=3000\
+	JOURNAL_COMPACT_MIN_FILES_PERC=20\
+	JOURNAL_COMPACT_MIN_FILES_DISK_CAP=3000\
+	JOURNAL_COMPACT_PERC=60\
 	JOURNAL_BUFFER_SIZE_PERC=3\
 	JOURNAL_BUFFER_PER_SEC=2000\
 	JOURNAL_DATA_SYNC=false\
@@ -104,19 +104,20 @@ ENV LOG_LEVEL=INFO\
 	SLOW_CONSUMER_POLICY=KILL\
 	SLOW_CONSUMER_CHECK_PERIOD=30\
 	CONN_USE_EPOLL=false\
-	CONN_TCP_BUFFER_SIZE=1048576\
+	CONN_TCP_BUFFER_SIZE=8388608\
 	CONN_LOW_BUFFER_WATERMARK_PERC=100\
 	CONN_HIGH_BUFFER_WATERMARK_PERC=400\
 	CONN_TCP_NO_DELAY=true\
 	CONN_BATCH_DELAY=3\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_PERC=2000\
+	CONN_REMOTING_THREADS_PROC_PERC=1000\
 	CONN_REMOTING_THREADS_MIN=48\
 	CONN_CONNECTIONS_ALLOWED_MEM_PERC=300\
 	FORCE_COMPACT=false\
 	FORCE_RECOVER=false\
-	ARTEMIS_DIR=/var/lib/artemis/etc
+	ARTEMIS_DIR=/var/lib/artemis/etc\
+	JDK_JAVA_OPTIONS=-XX:+UseZGC
 
 # Web Server
 EXPOSE 8161 \
