- Removing ZGC; Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -116,8 +116,7 @@ ENV LOG_LEVEL=INFO\
 	CONN_CONNECTIONS_ALLOWED_MEM_PERC=300\
 	FORCE_COMPACT=false\
 	FORCE_RECOVER=false\
-	ARTEMIS_DIR=/var/lib/artemis/etc\
-	JDK_JAVA_OPTIONS=-XX:+UseZGC
+	ARTEMIS_DIR=/var/lib/artemis/etc
 
 # Web Server
 EXPOSE 8161 \
