- Tuning; Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -67,22 +67,26 @@ RUN chmod -R 755 /opt/artemis-script \
 		mv -- "${FILE}" "${FILE%.sh}"; \
 	done
 
+# Artemis user.
+USER artemis
+
 # Variables.
 ENV LOG_LEVEL=INFO\
 	MAX_GLOBAL_SIZE_MEM_PERC=30\
-	MAX_QUEUE_SIZE_WINDOW_SIZE_MULT=30\
+	MAX_QUEUE_SIZE_WINDOW_SIZE_MULT=90\
 	MAX_QUEUE_SIZE_COUNT=3000000\
-	PREFECTH_QUEUE_WINDOW_SIZE_MULT=30\
+	PREFECTH_QUEUE_WINDOW_SIZE_MULT=90\
 	PREFECTH_QUEUE_SIZE_COUNT=3000000\
 	ASYNC_CONNECTION_EXECUTION_ENABLED=true\
 	THREAD_POOL_PROC_PERC=500\
-	THREAD_POOL_MIN=48\
-	SCHEDULED_THREAD_POOL_PROC_PERC=70\
+	THREAD_POOL_MIN=32\
+	SCHEDULED_THREAD_POOL_PROC_PERC=200\
 	SCHEDULED_THREAD_POOL_MIN=16\
-	PAGE_SYNC_PER_SEC=1000\
+	PAGE_SYNC_PER_SEC=100\
 	PAGE_SIZE_PERC=10\
 	PAGE_MAX_SIZE=30\
-	PAGE_MAX_IO_CONCURRENCY=30\
+	IO_THREAD_POOL_PROC_PERC=100\
+	IO_THREAD_POOL_MIN=10\
 	READ_WHOLE_PAGE=false\
 	JOURNAL_TYPE=NIO\
 	JOURNAL_MAX_IO=1\
@@ -96,22 +100,22 @@ ENV LOG_LEVEL=INFO\
 	JOURNAL_COMPACT_MIN_FILES_DISK_CAP=3000\
 	JOURNAL_COMPACT_PERC=60\
 	JOURNAL_BUFFER_SIZE_PERC=3\
-	JOURNAL_BUFFER_PER_SEC=2000\
+	JOURNAL_BUFFER_PER_SEC=700\
 	JOURNAL_DATA_SYNC=false\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
-	CONSUMER_WINDOW_SIZE=1048576\
+	CONSUMER_WINDOW_SIZE=262144\
 	SLOW_CONSUMER_THRESHOLD=1\
 	SLOW_CONSUMER_POLICY=KILL\
 	SLOW_CONSUMER_CHECK_PERIOD=30\
 	CONN_USE_EPOLL=false\
-	CONN_TCP_BUFFER_SIZE=8388608\
+	CONN_TCP_BUFFER_SIZE=262144\
 	CONN_LOW_BUFFER_WATERMARK_PERC=100\
-	CONN_HIGH_BUFFER_WATERMARK_PERC=400\
+	CONN_HIGH_BUFFER_WATERMARK_PERC=300\
 	CONN_TCP_NO_DELAY=true\
 	CONN_BATCH_DELAY=3\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
-	CONN_REMOTING_THREADS_PROC_PERC=1000\
+	CONN_REMOTING_THREADS_PROC_PERC=700\
 	CONN_REMOTING_THREADS_MIN=48\
 	CONN_CONNECTIONS_ALLOWED_MEM_PERC=300\
 	FORCE_COMPACT=false\
