- Tuning; Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -68,14 +68,14 @@ RUN chmod -R 755 /opt/artemis-script \
 	done
 
 # Artemis user.
-USER artemis
+#USER artemis
 
 # Variables.
 ENV LOG_LEVEL=INFO\
 	MAX_GLOBAL_SIZE_MEM_PERC=30\
-	MAX_QUEUE_SIZE_WINDOW_SIZE_MULT=90\
+	MAX_QUEUE_SIZE_WINDOW_SIZE_MULT=20\
 	MAX_QUEUE_SIZE_COUNT=3000000\
-	PREFECTH_QUEUE_WINDOW_SIZE_MULT=90\
+	PREFECTH_QUEUE_WINDOW_SIZE_MULT=20\
 	PREFECTH_QUEUE_SIZE_COUNT=3000000\
 	ASYNC_CONNECTION_EXECUTION_ENABLED=true\
 	THREAD_POOL_PROC_PERC=500\
@@ -103,16 +103,18 @@ ENV LOG_LEVEL=INFO\
 	JOURNAL_BUFFER_PER_SEC=700\
 	JOURNAL_DATA_SYNC=false\
 	LAST_VALUE_KEY=_AMQ_LVQ_NAME\
-	CONSUMER_WINDOW_SIZE=524288\
+	CONSUMER_WINDOW_SIZE=2097152\
 	SLOW_CONSUMER_THRESHOLD=1\
 	SLOW_CONSUMER_POLICY=KILL\
-	SLOW_CONSUMER_CHECK_PERIOD=30\
+	SLOW_CONSUMER_CHECK_PERIOD=600\
 	CONN_USE_EPOLL=false\
-	CONN_TCP_BUFFER_SIZE=131072\
-	CONN_LOW_BUFFER_WATERMARK_PERC=100\
-	CONN_HIGH_BUFFER_WATERMARK_PERC=400\
+	CONN_TCP_BUFFER_SIZE=-1\
+	CONN_LOW_BUFFER_WATERMARK_PERC=\
+	CONN_HIGH_BUFFER_WATERMARK_PERC=\
+	CONN_LOW_BUFFER_WATERMARK=32768\
+	CONN_HIGH_BUFFER_WATERMARK=524288\
 	CONN_TCP_NO_DELAY=true\
-	CONN_BATCH_DELAY=0\
+	CONN_BATCH_DELAY=2\
 	CONN_DIRECT_DELIVER=false\
 	CONN_HANDSHAKE_TIMEOUT=360\
 	CONN_REMOTING_THREADS_PROC_PERC=700\
