- Tuning; Signed-off-by: rvcoutinho <me@rvcoutinho.com>

--- a/src/main/infrastructure/service/Dockerfile
+++ b/src/main/infrastructure/service/Dockerfile
@@ -107,6 +107,7 @@ ENV LOG_LEVEL=INFO\
 	SLOW_CONSUMER_THRESHOLD=1\
 	SLOW_CONSUMER_POLICY=KILL\
 	SLOW_CONSUMER_CHECK_PERIOD=600\
+	MAX_EXPIRY_DELAY=259200000\
 	CONN_USE_EPOLL=false\
 	CONN_TCP_BUFFER_SIZE=-1\
 	CONN_LOW_BUFFER_WATERMARK_PERC=\
